--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,18 @@
 
 // Colors
     // @white: #FFFFFF;
+@brightText: rgba(255, 255, 255, 0.5);
+@white: #C192E9;
+@light: #8A5DB0;
+@neutral: #623A84;
+@dark: #3B1E54;
+@black: #150920;
+@darkBG: #202020;
+
+//Text
+
+@sans: 'Roboto', sans-serif;
+@serif: 'Roboto Slab', serif;
 
 // Media Queries 
-    // @mobile: ~"(max-width: [number]px)";
+@mobile: ~"(max-width: 500px)";
