--- a/css/index.css
+++ b/css/index.css
@@ -129,7 +129,151 @@ table {
 * {
   box-sizing: border-box;
   max-width: 100%;
+  background: #202020;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: 'Roboto Slab', serif;
 }
 html {
   font-size: 62.5%;
+}
+p {
+  font-size: 1.6rem;
+}
+h3 {
+  margin: 2px 0 2px 0;
+  font-size: 1.2rem;
+}
+h2 {
+  margin: 5px 0 5px 0;
+  font-size: 2.4rem;
+}
+h1 {
+  font-size: 4.8rem;
+}
+h1,
+h2,
+h3 {
+  color: #C192E9;
+  font-family: 'Roboto', sans-serif;
+}
+.navigation {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  background: #623A84;
+  color: #C192E9;
+}
+.navigation * {
+  background: inherit;
+  color: inherit;
+}
+.navigation .logoText {
+  font-family: 'Roboto', sans-serif;
+}
+.navigation .fa-hammer,
+.navigation .logoText {
+  text-decoration: none;
+  font-size: 6.4rem;
+  margin-left: 15px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.navigation nav {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation nav a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.4rem;
+  flex-grow: 0.24;
+  display: flex;
+  text-decoration: none;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: #C192E9;
+  background: #150920;
+}
+.navigation nav a:hover {
+  color: #150920;
+  background: #C192E9;
+}
+footer {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 15px;
+  margin: 15px 0 0 0;
+  align-items: center;
+  background: #150920;
+  border-top: 2px solid #C192E9;
+}
+footer * {
+  background: inherit;
+}
+body {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-items: center;
+  align-items: center;
+}
+body .main-content {
+  padding-top: 10px;
+  margin-top: 10px;
+  border-top: 2px solid #C192E9;
+  width: 85%;
+  max-width: 1140px;
+}
+body .main-content .promo {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+body .main-content .promo .banner {
+  background-image: url("/img/eugen-str-CrhsIRY3JWY-unsplash.jpg");
+  background-color: #2ed73a;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+}
+body .main-content .promo h1 {
+  margin: 35px;
+}
+body .main-content .promo div {
+  width: 95%;
+}
+body .main-content .main {
+  margin-top: 15px;
+  border-top: 2px solid #C192E9;
+  padding: 10px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+}
+body .main-content .main div {
+  padding: 10px;
+  width: 50%;
+  border-right: 2px dashed #C192E9;
+}
+@media (max-width: 500px) {
+  body .main-content .main div {
+    border-right: none;
+    width: 100%;
+  }
+}
+body .main-content .main .last {
+  border-right: none;
+}
+@media (max-width: 500px) {
+  body .main-content .main {
+    flex-direction: column;
+  }
 }
