--- a/less/global.less
+++ b/less/global.less
@@ -1,8 +1,34 @@
 * {
   box-sizing: border-box;
   max-width: 100%;
+  background: @darkBG;
+  color: @brightText;
+  font-family: @serif;
 }
 
 html {
   font-size: 62.5%;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+h3{
+  margin: 2px 0 2px 0;
+  font-size: 1.2rem;
+}
+
+h2{
+  margin: 5px 0 5px 0;
+  font-size: 2.4rem;
+}
+
+h1{
+  font-size: 4.8rem;
+}
+
+h1, h2, h3{
+  color: @white;
+  font-family: @sans;
 }
