--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,14 +7,18 @@
 //     }
 // }
 
-// .customButton(@bgColor: #9090ff, @txtColor: #ffffff){
+.customButton(@bgColor: @black, @txtColor: @white){
     
-//     .fullWidthWhenMobile();
-    
-//     border: none;
-//     font-weight: bold;
-//     border-radius: 1rem;
-//     padding: 1rem;
-//     background: @bgColor;
-//     color: @txtColor;
-// }
+    display: flex;
+    text-decoration: none;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: @txtColor;
+    background: @bgColor;
+
+    &:hover{
+        color: @bgColor;
+        background: @txtColor;
+    }
+}
