prettification of landing page, rounded corners

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,9 +5,10 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
+    padding: 5px 10px;
     background: @neutral;
     color: @white;
+    border-radius: 0px 0px 15px 15px;
     
     *{
         background: inherit;
@@ -37,6 +38,7 @@
             font-family: @sans;
             font-size: 2.4rem;
             flex-grow: 0.24;
+            border-radius: 5px;
 
             .customButton();
 
