--- a/css/index.css
+++ b/css/index.css
@@ -162,9 +162,10 @@ h3 {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 5px 10px;
   background: #623A84;
   color: #C192E9;
+  border-radius: 0px 0px 15px 15px;
 }
 .navigation * {
   background: inherit;
@@ -192,6 +193,7 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 2.4rem;
   flex-grow: 0.24;
+  border-radius: 5px;
   display: flex;
   text-decoration: none;
   height: 100%;
@@ -243,15 +245,13 @@ body .main-content .promo .banner {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
+  border-radius: 10px;
 }
 body .main-content .promo h1 {
-  margin: 35px;
-}
-body .main-content .promo div {
-  width: 95%;
+  margin: 35px 0 15px 0;
 }
 body .main-content .main {
-  margin-top: 15px;
+  margin-top: 35px;
   border-top: 2px solid #C192E9;
   padding: 10px;
   display: flex;
