--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,21 +24,16 @@ body{
                 background-repeat: no-repeat;
                 background-size: cover;
                 width: 100%; 
+                border-radius: 10px;
             }
 
             h1{
-                margin: 35px;
-            }
-            div{
-                width: 95%;
-
-                h2{
-                }
+                margin: 35px 0 15px 0;
             }
         }
 
         .main{
-            margin-top: 15px;
+            margin-top: 35px;
             border-top: 2px solid @white;
             padding: 10px;
             display: flex;
