--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,6 +16,11 @@
     align-items: center;
     color: @txtColor;
     background: @bgColor;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 2px; 
+    margin-right: 2px;
+    border-radius: 5px;
 
     &:hover{
         color: @bgColor;
