--- a/less/footer.less
+++ b/less/footer.less
@@ -7,6 +7,8 @@ footer{
     align-items: center;
     background: @black;
     border-top: 2px solid @white;
+    align-self: flex-end;
+    justify-self: flex-end;
 
     *{
         background: inherit;
