--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,6 +24,11 @@
         font-size: 6.4rem;
         margin-left: 15px;
         color: @brightText;
+
+        @media @mobile{
+            font-size: 4.2rem;
+            margin: 5px 0;
+        }
     }
 
     nav{
@@ -37,11 +42,22 @@
         a{
             font-family: @sans;
             font-size: 2.4rem;
-            flex-grow: 0.24;
-            border-radius: 5px;
+            flex-grow: 1;
 
             .customButton();
 
+            @media @mobile{
+                font-size: 1.6rem;
+            }
+
+        }
+        @media @mobile{
+            width: 100%;
         }
     }
+
+    @media @mobile{
+        flex-flow: column nowrap;
+    }
+
 }
