--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,11 @@ h2 {
 h1 {
   font-size: 4.8rem;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 2.8rem;
+  }
+}
 h1,
 h2,
 h3 {
@@ -203,9 +208,9 @@ a {
   font-family: 'Roboto', sans-serif;
   font-size: 2.4rem;
   flex-grow: 1;
+  height: 100%;
   display: flex;
   text-decoration: none;
-  height: 100%;
   justify-content: center;
   align-items: center;
   color: #C192E9;
@@ -263,6 +268,11 @@ body .main-content {
   width: 85%;
   max-width: 1140px;
 }
+@media (max-width: 500px) {
+  body .main-content {
+    width: 100%;
+  }
+}
 body .main-content .promo {
   display: flex;
   flex-flow: column nowrap;
@@ -294,6 +304,9 @@ body .main-content .promo h1 {
     padding: 0 20px;
   }
 }
+body .main-content .promo .center {
+  width: 85%;
+}
 body .main-content .promo .bigButton {
   font-family: 'Roboto', sans-serif;
   font-size: 2.4rem;
@@ -302,7 +315,6 @@ body .main-content .promo .bigButton {
   border: 2px solid #623A84;
   display: flex;
   text-decoration: none;
-  height: 100%;
   justify-content: center;
   align-items: center;
   color: #C192E9;
