--- a/less/navigation.less
+++ b/less/navigation.less
@@ -43,7 +43,8 @@
             font-family: @sans;
             font-size: 2.4rem;
             flex-grow: 1;
-
+            height: 100%;
+            
             .customButton();
 
             @media @mobile{
