--- a/less/home-page.less
+++ b/less/home-page.less
@@ -48,7 +48,9 @@ body{
             }
 
             .center{
-                width: 85%;
+                @media @mobile{
+                    width: 85%;
+                } 
             }
 
             .bigButton{
