--- a/css/index.css
+++ b/css/index.css
@@ -304,8 +304,10 @@ body .main-content .promo h1 {
     padding: 0 20px;
   }
 }
-body .main-content .promo .center {
-  width: 85%;
+@media (max-width: 500px) {
+  body .main-content .promo .center {
+    width: 85%;
+  }
 }
 body .main-content .promo .bigButton {
   font-family: 'Roboto', sans-serif;
@@ -386,4 +388,37 @@ body .main-content .promo .bigButton:hover {
   .main {
     flex-direction: column;
   }
+}
+.team {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+.team .personContainer {
+  background: #150920;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  padding: 15px;
+  border-radius: 15px;
+  width: 48%;
+  margin: 10px 0;
+}
+.team .personContainer div {
+  display: flex;
+  flex-flow: row nowrap;
+}
+.team .personContainer div img {
+  border-radius: 50%;
+  width: 50%;
+}
+.team .personContainer div p {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  width: 50%;
+  padding: 15px;
+}
+.team .personContainer * {
+  background: inherit;
 }
