--- a/less/about-page.less
+++ b/less/about-page.less
@@ -64,7 +64,10 @@
 .team{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 15px;
+    border-top: 1px dashed @neutral;
+    align-items: flex-start;
 
     .personContainer{
         background: @black;
@@ -76,23 +79,68 @@
         width: 48%;
         margin: 10px 0;
 
-        div{
+        h1{
+            background: @light;
+            color: @black;
+            padding: 5px;
+            margin: 15px 0;
+            border-radius: 5px;
+        }
+
+        .personHalf{
             display: flex;
             flex-flow: row nowrap; 
+            justify-content: space-between;
+            align-items: center;
             img{
                 border-radius: 50%;
-                width: 50%;
+                max-width: 50%;
+                justify-content: center;
             }
-            p{
+            .infoContainer{
                 display: flex;
                 flex-flow: column nowrap;
                 justify-content: center;
-                width: 50%;
+                max-width: 50%;
                 padding: 15px;
+
+                @media @mobile{
+                    max-width: 100%;
+                }
+
+                h2{
+                    display: flex;
+                    justify-content: center;
+                }
+            }
+            img, p{
+                @media @mobile{
+                    max-width: 100%;
+                }
+            }
+            @media @mobile{
+                flex-flow: column nowrap;
             }
         }
+
+        .buttonBar{
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-evenly;
+            width: 100%;
+            padding: 0;
+
+            i{
+                font-size: 4.8rem;
+            }
+        }
+
         *{
             background: inherit;
+        }
+        @media @mobile{
+            width: 100%;
+            flex-flow: column nowrap;
         }
     }
 }
