--- a/less/home-page.less
+++ b/less/home-page.less
@@ -22,6 +22,14 @@ body{
 
             div{
                 padding: 20px;
+
+                h2{ 
+                    @media @mobile{
+                        display: flex;      
+                        width: 100%;
+                        justify-content: center;
+                    }
+                }
             }
 
             .banner{
